# motioneye-client

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: build.yaml  build.yml  constraints.txt  labeler.yml  release-drafter.yml
example/: simple.py
motioneye_client/: __init__.py  client.py  const.py  utils.py
tests/: __init__.py  test_client.py
